Fix padding on search icon on mobile

--- a/src/inform_mapper/static/scss/_graph.scss
+++ b/src/inform_mapper/static/scss/_graph.scss
@@ -76,6 +76,10 @@ $info-box-width: 25%;
     }
 
     & .search-icon {
+        @media (max-width: 750px) {
+            left: 10%;
+        }
+
         position: absolute;
         top: 20px;
         left: 5%;
